--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -7,6 +7,19 @@
       sessionStorage.redirect = location.pathname;
     </script>
     <meta http-equiv="refresh" content="0;URL=./index.html">
+  </head>
+  <body></body>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Redirecting...</title>
+    <script>
+      sessionStorage.redirect = location.pathname;
+    </script>
+    <meta http-equiv="refresh" content="0;URL=/Crime_Tracking/index.html">
   </head>
   <body></body>
 </html>
